<resources>
    <string name="app_name">Jumia</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="submit_label">Submit</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="login_label">Login</string>
    <string name="search_label">Search</string>
    <string name="ok_label">OK</string>
    <string name="loading_message">Loading…</string>
    <string name="home_label">Home</string>
    <string name="products_label">Products</string>
    <string name="brands_label">Brands</string>
    <string name="my_account">My Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="categories_label">Categories</string>
    <string name="nav_country">Choose Country</string>
    <string name="nav_track_order">Track My Order</string>
    <string name="nav_country_warning">You are about to change the country. This clears the cart and you will be logged out. Are you sure?</string>
    <string name="navigation_cart_empty">Your cart is empty</string>
    <string name="login_sectiontitle">Credentials</string>
    <string name="register_required_text">Please fill in the required(*) fields</string>
    <string name="fgt_pass">Forgot Password?</string>
    <string name="forgotpass_header">Password Recovery</string>
    <string name="forgotten_password">Please type in your email.</string>
    <string name="forgotten_password_sub_text">We will send you a link to change the password.</string>
    <string name="forgotten_password_resulttitle">Password recovery</string>
    <string name="forgotten_password_successtext">Email sent</string>
    <string name="forgotten_password_examplemail">john.doe@example.com</string>
    <string name="logout_title">Logout Confirmation</string>
    <string name="logout_text_question">Are you sure you want to exit?</string>
    <string name="order_no_items">You have no items in the cart</string>
    <string name="categories_title">Search Categories</string>
    <string name="categories_toplevel_title">All Categories</string>
    <string name="account_name">My Account</string>
    <string name="myaccount_userdata">User Data</string>
    <string name="personal_data_label">Your Personal Data</string>
    <string name="new_password_label">New Password</string>
    <string name="option2_description">Change Password, manage email</string>
    <string name="new_password_hint">New password</string>
    <string name="retype_new_password_hint">Confirm password</string>
    <string name="your_cart">Your Cart</string>
    <string name="product_specifications">Specifications</string>
    <string name="product_variant_placeholder">…</string>
    <string name="product_features_title">Product Features</string>
    <string name="product_description_title">Product Description</string>
    <string name="product_details_title">Product Details</string>
    <string name="share_checkout_this_product">Check out this product I found:</string>
    <string name="product_could_not_retrieved">The product information could not be retrieved!</string>
    <string name="share_subject">Jumia Sharing</string>
    <string name="product_variance_choose">Please choose</string>
    <string name="product_variance_choose_error">Please choose one of several</string>
    <string name="product_outof_stock">Item is out of stock</string>
    <string name="error_add_to_cart_failed">Adding to cart failed</string>
    <string name="action_label_add_address">Add New Address</string>
    <string name="action_label_basket">Basket</string>
    <string name="action_label_share">Share It</string>
    <string name="action_label_wishlist">Wish List</string>
    <string name="action_label_search_hint">Search on Jumia</string>
    <string name="dynamic_errortext"> is not correct </string>
    <string name="error_ismandatory">Please fill in the </string>
    <string name="dialog_to_reviews">To reviews</string>
    <string name="submit_text">Your comment has been submited and is now subject to approval.</string>
    <string name="added_to_shop_cart_dialog_text">Item was added to shopping cart</string>
    <string name="vat_string">VAT </string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_shopping_cart">Add to Cart</string>
    <string name="call_to_order">Call to order</string>
    <string name="shoppingcart_title">My Cart</string>
    <string name="shoppingcart_dialog_title">Shopping Cart</string>
    <string name="checkout_button_text">Proceed to Checkout</string>
    <string name="shoppingcart_alert_header">Basket</string>
    <string name="shoppingcart_alert_message_no_items">Basket empty! Please add products to the cart.</string>
    <string name="error_add_to_shopping_cart">This product could not be added to the shopping cart. Please try again later.</string>
    <string name="error_add_to_shopping_cart_quantity">You cannot order more than the allowed quantity. Sorry.</string>
    <string name="shoppingcart_choose_quantity">Choose Quantity</string>
    <string name="shoppingcart_quantity">Quantity</string>
    <string name="shoppingcart_article">article</string>
    <string name="shoppingcart_articles">articles</string>
    <string name="sub_total_title">Subtotal</string>
    <string name="shoppingcart_item_btn_delete">Delete</string>
    <string name="register_button">Create Account</string>
    <string name="register_title">Create Account</string>
    <string name="register_sectiontitle">Account Data</string>
    <string name="registration_text">Register</string>
    <string name="register_text_terms_a">I agree with the</string>
    <string name="register_text_terms_b">Terms and Conditions</string>
    <string name="register_dialog_birthday">Your Date of Birth</string>
    <string name="register_birthday">Birthday</string>
    <string name="validation_title">Input data error</string>
    <string name="validation_errortext">There were errors on the data submited, please check your input fields.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="products_sort_popularity">Popularity</string>
    <string name="products_sort_newin">New in</string>
    <string name="products_sort_priceup">Price up</string>
    <string name="products_sort_pricedown">Price down</string>
    <string name="products_sort_name">Name</string>
    <string name="products_sort_brand">Brand</string>
    <string name="products_sort_bestrated">Best Rating</string>
    <string name="try_again">Retry</string>
    <string name="close_app">Close App</string>
    <string name="loading_more">Loading more items…</string>
    <string name="no_internet_access_warning_title">No Internet Access!</string>
    <string name="no_connect_dialog_content">Please check your Internet-Connection and try again!</string>
    <string name="writereview_title_hint">Title</string>
    <string name="writereview_review_hint">Comment</string>
    <string name="writereview_send">Send Review</string>
    <string name="write_comment">Write a Review</string>
    <string name="submit_title">Review sent</string>
    <string name="form_texttoshort"> text is too short</string>
    <string name="form_texttolong"> text is too long</string>
    <string name="form_passwordsnomatch">Passwords do not match</string>
    <string name="password_changed">Password changed with success</string>
    <string name="server_error_title">Problem occurred</string>
    <string name="server_error">We have encountered a small problem fetching the data.</string>
    <string name="password_new_mincharacters">The new password has to have at least 6 characters</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="rating_question">You have used this Product? Rate it now!</string>
    <string name="posted_by">posted by</string>
    <string name="name">Name</string>
    <string name="error_login_title">Login failed</string>
    <string name="error_register_title">Registration failed</string>
    <string name="error_register_alreadyexists">This email already exists. Please choose another one.</string>
    <string name="error_forgotpassword_title">Password recovery failed</string>
    <string name="stale_warning">Lost connection</string>
    <string name="upgrade_optional_title">Upgrade available</string>
    <string name="upgrade_optional_text">There is a new update available that we prepared to make shopping on Jumia even better! Be sure to upgrade today!</string>
    <string name="upgrade_forced_title">Upgrade necessary</string>
    <string name="upgrade_forced_text">We found something that we needed to fix to make shopping on Jumia even better! You will need to update before you continue using.</string>
    <string name="upgrade_proceed">Upgrade</string>
    <string name="upgrade_remindmelater">Remind me later</string>
    <string name="incomplete_alert">Oh oh, could not complete!</string>
    <string name="products_could_notloaded">Loading more products failed. Please try again.</string>
    <string name="client_error_title">App error!</string>
    <string name="shoppingcart_items">Items</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Receive exclusive offers and personal updates</string>
    <string name="error_no_connection">No connection</string>
    <string name="section_title_account">Account Settings</string>
    <string name="section_title_notification">Notification Settings</string>
    <string name="rating_quality">Quality</string>
    <string name="call_to_order_number">014604400</string>
    <string name="home_tip_text">Swipe left or right to change the category</string>
    <string name="tip_tap_text">Tap to open the product gallery</string>
    <string name="tip_swipe_text">Swipe left or right to\nview different images </string>
    <string name="go_shop_text">Shop Now</string>
    <string name="promotion_tip_tap_text">Tap the box above to copy the code to the clipboard and keep it handy for checkout</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="track_order">Track Order</string>
    <string name="track_order_hint">Order ID</string>
    <string name="thank_you_order_title">Thank You!</string>
    <string name="order_success">Your order has been successfully registered\n with the number:</string>
    <string name="creation_date">Creation Date:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="order_track_products">Products:</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="order_track_success">You can track your order visiting \nthe order status area in this app</string>
    <string name="facebook_login_button_text">Login with Facebook</string>
    <string name="order_summary_shipping_fee_label">Shipping Fee:</string>
    <string name="order_summary_subtotal_label">Subtotal:</string>
    <string name="my_order_voucher_label">Voucher</string>
    <string name="my_order_coupon_label">Coupon</string>
    <string name="voucher_use">Use</string>
    <string name="voucher_message_hint">Enter your coupon code here</string>
    <string name="voucher_error_message">Please input a valid Coupon Code</string>
    <string name="extra_costs">Extra Costs:</string>
    <string name="my_profile">My Profile</string>
    <string name="favourites">My Favourites</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="login_remember_user_email">Remember my email</string>
</resources>