<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/rounded_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <org.holoeverywhere.widget.TextView
                style="@style/rounded_box_title_grey"
                android:text="@string/login_sectiontitle" />

            <View style="@style/divider_horizontal_orange" />

            <LinearLayout
                android:layout_width="@dimen/login_container_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_margin_medium"
                android:orientation="vertical" >

                <com.facebook.widget.LoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/authButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/rounded_margin_mid"
                    android:text="@string/facebook_login_button_text"
                    fb:login_text="@string/facebook_login_button_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/login_margin_medium"
                    android:layout_marginLeft="@dimen/rounded_margin_mid"
                    android:layout_marginRight="@dimen/rounded_margin_mid"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/form_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/login_margin_small"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <org.holoeverywhere.widget.CheckBox
                        android:id="@+id/login_remember_user_email"
                        style="@style/form_checkbox_style"
                        android:checked="true"
                        android:text="@string/login_remember_user_email" />
                </LinearLayout>

                <org.holoeverywhere.widget.Button
                    android:id="@+id/middle_login_button_signin"
                    style="@style/button_orange_bottom"
                    android:layout_below="@id/login_remember_user_email"
                    android:contentDescription="@string/login_button_description"
                    android:text="@string/login_label" />

                <org.holoeverywhere.widget.TextView
                    android:id="@+id/middle_login_link_fgtpassword"
                    style="@style/text_normal"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/login_margin_high"
                    android:layout_marginTop="@dimen/login_margin_small"
                    android:text="@string/fgt_pass"
                    android:textColor="@drawable/selector_link_blue" />

                <org.holoeverywhere.widget.Button
                    android:id="@+id/middle_login_link_register"
                    style="@style/button_grey_bottom"
                    android:layout_marginBottom="@dimen/rounded_margin_mid"
                    android:contentDescription="@string/register_button_description"
                    android:text="@string/register_button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>