<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/rounded_margin_mid"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/rounded_box"
            android:layout_marginBottom="0dp" >

            <org.holoeverywhere.widget.TextView
                android:id="@+id/title"
                style="@style/rounded_box_title_grey"
                android:text="@string/shoppingcart_items" />

            <org.holoeverywhere.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/title"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/rounded_margin_mid"
                android:fontFamily="roboto_regular"
                android:text="@string/shoppingcart_quantity"
                android:textColor="@color/grey_middlelight"
                android:textSize="@dimen/text_title" />

            <LinearLayout
                android:id="@+id/shoppingcart_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:orientation="vertical" >
            </LinearLayout>

            <View
                style="@style/divider_horizontal_orange"
                android:layout_below="@id/title" />
        </RelativeLayout>

        <include layout="@layout/voucher_insert_layout" />

        <include layout="@layout/shopping_basket_subtotal_element" />

        <org.holoeverywhere.widget.Button
            android:id="@+id/checkout_button"
            style="@style/button_orange_bottom"
            android:layout_marginLeft="@dimen/rounded_margin_mid"
            android:layout_marginRight="@dimen/rounded_margin_mid"
            android:layout_marginTop="@dimen/rounded_margin_mid"
            android:text="@string/checkout_button_text" />

        <org.holoeverywhere.widget.Button
            android:id="@+id/checkout_call_to_order"
            style="@style/button_grey_bottom"
            android:layout_marginLeft="@dimen/rounded_margin_mid"
            android:layout_marginRight="@dimen/rounded_margin_mid"
            android:text="@string/call_to_order"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>