<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- PRODUCTS -->

    <org.holoeverywhere.widget.TextView
        style="@style/text_normal"
        android:layout_marginTop="@dimen/rounded_margin_double_mid"
        android:text="@string/order_track_products" />

    <LinearLayout
        android:id="@+id/checkout_summary_products_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical" />
    <!-- Price Rules -->

    <LinearLayout
        android:id="@+id/checkout_summary_price_rules_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical"
        android:visibility="gone" >
    </LinearLayout>

    <!-- VAT -->

    <LinearLayout
        android:id="@+id/checkout_summary_products_vat_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        android:visibility="gone" >

        <org.holoeverywhere.widget.TextView
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/vat_string" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/checkout_summary_products_text_vat_value"
            style="@style/text_normal" />
    </LinearLayout>

    <!-- SHIPPING FEE -->

    <LinearLayout
        android:id="@+id/checkout_summary_products_shippingfee_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        android:visibility="gone" >

        <org.holoeverywhere.widget.TextView
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/order_summary_shipping_fee_label" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/checkout_summary_products_text_shippingfee"
            style="@style/text_normal" />
    </LinearLayout>

    <!-- VOUCHER -->

    <LinearLayout
        android:id="@+id/checkout_summary_products_voucher_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        android:visibility="gone" >

        <org.holoeverywhere.widget.TextView
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/my_order_voucher_label"
            android:textColor="@color/green_basic" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/checkout_summary_products_text_voucher"
            style="@style/text_normal"
            android:textColor="@color/green_basic" />
    </LinearLayout>

    <!-- SUB TOTAL -->

    <LinearLayout
        android:id="@+id/checkout_summary_products_subtotal_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal" >

        <org.holoeverywhere.widget.TextView
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/order_summary_subtotal_label" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/checkout_summary_products_text_subtotal"
            style="@style/text_normal" />
    </LinearLayout>

    <!-- Extra Costs -->

    <LinearLayout
        android:id="@+id/checkout_summary_extra_costs_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal" >

        <org.holoeverywhere.widget.TextView
            android:id="@+id/checkout_summary_extra_costs"
            style="@style/text_normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/extra_costs" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/checkout_summary_extra_costs_value"
            style="@style/text_normal" />
    </LinearLayout>

</LinearLayout>