<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/voucher_container"
    style="@style/rounded_box"
    android:layout_marginBottom="0dp" >

    <org.holoeverywhere.widget.TextView
        android:id="@+id/title"
        style="@style/rounded_box_title_grey"
        android:text="@string/my_order_coupon_label" />

    <View
        android:id="@+id/voucher_divider"
        style="@style/divider_horizontal_orange"
        android:layout_below="@id/title" />

    <RelativeLayout
        android:id="@+id/voucher_container"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/voucher_divider"
        android:gravity="center" >

        <org.holoeverywhere.widget.Button
            android:id="@+id/voucher_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/rounded_margin_mid"
            android:ellipsize="marquee"
            android:paddingLeft="16.6dp"
            android:paddingRight="16.6dp"
            android:singleLine="true"
            android:text="@string/voucher_use"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_xs" />

        <org.holoeverywhere.widget.EditText
            android:id="@+id/voucher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/rounded_margin_mid"
            android:layout_marginRight="26.67dp"
            android:layout_toLeftOf="@+id/voucher_btn"
            android:background="@drawable/selector_edittext_bottomline"
            android:cursorVisible="true"
            android:ellipsize="end"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/voucher_message_hint"
            android:maxLines="1"
            android:textColor="@color/grey_middlelight"
            android:textColorHint="@color/form_text_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_title" >

            <requestFocus />
        </org.holoeverywhere.widget.EditText>

        <org.holoeverywhere.widget.TextView
            android:id="@+id/voucher_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/voucher_name"
            android:layout_marginLeft="@dimen/rounded_margin_mid"
            android:layout_marginTop="@dimen/margin_x_small"
            android:fontFamily="roboto_regular"
            android:gravity="left"
            android:text="@string/voucher_error_message"
            android:textColor="@color/red_middle"
            android:textSize="@dimen/text_xs"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>